--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Benvenuto su GitHub Pages</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DarkSouls Data Solution</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Benvenuto nel mio sito</h1>
-  <p>Questo è il mio primo sito ospitato su GitHub Pages!</p>
-  <script src="script.js"></script>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">Chi Siamo</a></li>
+                <li><a href="#services">Servizi</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#contact">Contatti</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home" class="section">
+        <h1>DarkSouls Data Solution</h1>
+        <p>Soluzioni di Data Science per il tuo business</p>
+    </section>
+
+    <section id="about" class="section">
+        <h2>Chi Siamo</h2>
+        <p>DarkSouls Data Solution è una società leader nel campo della Data Science e della Business Intelligence.</p>
+    </section>
+
+    <section id="services" class="section">
+        <h2>Servizi</h2>
+        <p>Offriamo una vasta gamma di servizi per soddisfare tutte le tue esigenze di dati.</p>
+    </section>
+
+    <section id="team" class="section">
+        <h2>Team</h2>
+        <div class="team-member">
+            <h3>Christian</h3>
+            <p>Chief Executive Officer (CEO), Chief Data Engineer (CDE), Business Intelligence Analyst (BIA), Marketing and Business Strategy Specialist (MBSS)</p>
+        </div>
+        <div class="team-member">
+            <h3>Valerio</h3>
+            <p>Business Intelligence Analyst (BIA), Client Relations Specialist (CRS), Data Engineer (DE)</p>
+        </div>
+        <div class="team-member">
+            <h3>Chiara</h3>
+            <p>Data Quality Analyst (DQA), Data Analyst (DA), Data Engineer (DE)</p>
+        </div>
+        <div class="team-member">
+            <h3>Nicola</h3>
+            <p>Data Engineer (DE), Python Developer (PD), Data Analyst (DA)</p>
+        </div>
+        <div class="team-member">
+            <h3>Lorenzo</h3>
+            <p>Database Administrator (DBA), Data Engineer (DE)</p>
+        </div>
+    </section>
+
+    <section id="contact" class="section">
+        <h2>Contatti</h2>
+        <p>Per ulteriori informazioni, contattaci a info@darksoulsdatasolution.com</p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
