--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     </header>
 
     <section id="home" class="section">
-        <h1>DarkSouls Data Solution</h1>
-        <p>Soluzioni di Data Science per il tuo business</p>
+        <div class="content">
+            <h1>DarkSouls Data Solution</h1>
+            <p>Soluzioni di Data Science per il tuo business</p>
+            <button class="cta-button">Scopri di più</button>
+        </div>
     </section>
 
     <section id="about" class="section">
@@ -37,22 +40,27 @@
     <section id="team" class="section">
         <h2>Team</h2>
         <div class="team-member">
+            <img src="images/christian.jpg" alt="Christian">
             <h3>Christian</h3>
             <p>Chief Executive Officer (CEO), Chief Data Engineer (CDE), Business Intelligence Analyst (BIA), Marketing and Business Strategy Specialist (MBSS)</p>
         </div>
         <div class="team-member">
+            <img src="images/valerio.jpg" alt="Valerio">
             <h3>Valerio</h3>
             <p>Business Intelligence Analyst (BIA), Client Relations Specialist (CRS), Data Engineer (DE)</p>
         </div>
         <div class="team-member">
+            <img src="images/chiara.jpg" alt="Chiara">
             <h3>Chiara</h3>
             <p>Data Quality Analyst (DQA), Data Analyst (DA), Data Engineer (DE)</p>
         </div>
         <div class="team-member">
+            <img src="images/nicola.jpg" alt="Nicola">
             <h3>Nicola</h3>
             <p>Data Engineer (DE), Python Developer (PD), Data Analyst (DA)</p>
         </div>
         <div class="team-member">
+            <img src="images/lorenzo.jpg" alt="Lorenzo">
             <h3>Lorenzo</h3>
             <p>Database Administrator (DBA), Data Engineer (DE)</p>
         </div>
@@ -60,7 +68,7 @@
 
     <section id="contact" class="section">
         <h2>Contatti</h2>
-        <p>Per ulteriori informazioni, contattaci a info@darksoulsdatasolution.com</p>
+        <p>Per ulteriori informazioni, contattaci a <a href="mailto:info@darksoulsdatasolution.com">info@darksoulsdatasolution.com</a></p>
     </section>
 
     <script src="script.js"></script>
