--- a/index.html
+++ b/index.html
@@ -5,70 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DarkSouls Data Solution</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">Chi Siamo</a></li>
-                <li><a href="#services">Servizi</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contatti</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">Chi Siamo</a></li>
+                <li><a href="services.html">Servizi</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="contact.html">Contatti</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home" class="section">
-        <div class="content">
+        <div class="content animate__animated animate__fadeIn">
             <h1>DarkSouls Data Solution</h1>
             <p>Soluzioni di Data Science per il tuo business</p>
             <button class="cta-button">Scopri di più</button>
         </div>
-    </section>
-
-    <section id="about" class="section">
-        <h2>Chi Siamo</h2>
-        <p>DarkSouls Data Solution è una società leader nel campo della Data Science e della Business Intelligence.</p>
-    </section>
-
-    <section id="services" class="section">
-        <h2>Servizi</h2>
-        <p>Offriamo una vasta gamma di servizi per soddisfare tutte le tue esigenze di dati.</p>
-    </section>
-
-    <section id="team" class="section">
-        <h2>Team</h2>
-        <div class="team-member">
-            <img src="images/christian.jpg" alt="Christian">
-            <h3>Christian</h3>
-            <p>Chief Executive Officer (CEO), Chief Data Engineer (CDE), Business Intelligence Analyst (BIA), Marketing and Business Strategy Specialist (MBSS)</p>
-        </div>
-        <div class="team-member">
-            <img src="images/valerio.jpg" alt="Valerio">
-            <h3>Valerio</h3>
-            <p>Business Intelligence Analyst (BIA), Client Relations Specialist (CRS), Data Engineer (DE)</p>
-        </div>
-        <div class="team-member">
-            <img src="images/chiara.jpg" alt="Chiara">
-            <h3>Chiara</h3>
-            <p>Data Quality Analyst (DQA), Data Analyst (DA), Data Engineer (DE)</p>
-        </div>
-        <div class="team-member">
-            <img src="images/nicola.jpg" alt="Nicola">
-            <h3>Nicola</h3>
-            <p>Data Engineer (DE), Python Developer (PD), Data Analyst (DA)</p>
-        </div>
-        <div class="team-member">
-            <img src="images/lorenzo.jpg" alt="Lorenzo">
-            <h3>Lorenzo</h3>
-            <p>Database Administrator (DBA), Data Engineer (DE)</p>
-        </div>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Contatti</h2>
-        <p>Per ulteriori informazioni, contattaci a <a href="mailto:info@darksoulsdatasolution.com">info@darksoulsdatasolution.com</a></p>
     </section>
 
     <script src="script.js"></script>
