--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DarkSouls Data Solution</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,12 +22,38 @@
     </header>
 
     <section id="home" class="section">
-        <div class="content animate__animated animate__fadeIn">
-            <h1>DarkSouls Data Solution</h1>
-            <p>Soluzioni di Data Science per il tuo business</p>
-            <button class="cta-button">Scopri di più</button>
+        <div class="hero-content">
+            <h1 class="hero-title animate__animated animate__fadeIn">DarkSouls Data Solution</h1>
+            <p class="hero-subtitle animate__animated animate__fadeIn">Soluzioni di Data Science per il tuo business</p>
+            <a href="about.html" class="cta-button animate__animated animate__fadeIn">Scopri di più</a>
         </div>
     </section>
+
+    <section id="details" class="section">
+        <div class="detail animate__animated animate__fadeInLeft">
+            <h2>Analisi Avanzata dei Dati</h2>
+            <p>Utilizziamo tecniche di machine learning e intelligenza artificiale per trasformare i dati grezzi in informazioni strategiche.</p>
+        </div>
+        <div class="detail animate__animated animate__fadeInRight">
+            <h2>Soluzioni Personalizzate</h2>
+            <p>Offriamo soluzioni su misura per soddisfare le specifiche esigenze del tuo business, ottimizzando processi e migliorando la performance aziendale.</p>
+        </div>
+        <div class="detail animate__animated animate__fadeInLeft">
+            <h2>Visualizzazione Intuitiva</h2>
+            <p>Creiamo dashboard interattive e report che rendono i dati facilmente comprensibili e accessibili per il processo decisionale.</p>
+        </div>
+    </section>
+
+    <section id="more-info" class="section">
+        <div class="info animate__animated animate__fadeInUp">
+            <h2>Perché Scegliere DarkSouls?</h2>
+            <p>La nostra esperienza nel settore e l'approccio innovativo ci permettono di fornire soluzioni di alta qualità che aiutano le aziende a crescere e a raggiungere i loro obiettivi strategici.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 DarkSouls Data Solution. Tutti i diritti riservati.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
