--- a/index.html
+++ b/index.html
@@ -32,22 +32,57 @@
     <section id="details" class="section">
         <div class="detail animate__animated animate__fadeInLeft">
             <h2>Analisi Avanzata dei Dati</h2>
-            <p>Utilizziamo tecniche di machine learning e intelligenza artificiale per trasformare i dati grezzi in informazioni strategiche.</p>
+            <p>Utilizziamo tecniche di machine learning e intelligenza artificiale per trasformare i dati grezzi in informazioni strategiche, fornendo insight che guidano decisioni aziendali informate e mirate.</p>
         </div>
         <div class="detail animate__animated animate__fadeInRight">
             <h2>Soluzioni Personalizzate</h2>
-            <p>Offriamo soluzioni su misura per soddisfare le specifiche esigenze del tuo business, ottimizzando processi e migliorando la performance aziendale.</p>
+            <p>Offriamo soluzioni su misura per soddisfare le specifiche esigenze del tuo business. Collaboriamo strettamente con i nostri clienti per progettare e implementare strategie di dati che ottimizzano i processi e migliorano la performance aziendale.</p>
         </div>
         <div class="detail animate__animated animate__fadeInLeft">
             <h2>Visualizzazione Intuitiva</h2>
-            <p>Creiamo dashboard interattive e report che rendono i dati facilmente comprensibili e accessibili per il processo decisionale.</p>
+            <p>Creiamo dashboard interattive e report dettagliati che rendono i dati facilmente comprensibili e accessibili per il processo decisionale, utilizzando tecniche di visualizzazione all'avanguardia per presentare le informazioni in modo chiaro e conciso.</p>
         </div>
     </section>
 
     <section id="more-info" class="section">
         <div class="info animate__animated animate__fadeInUp">
             <h2>Perché Scegliere DarkSouls?</h2>
-            <p>La nostra esperienza nel settore e l'approccio innovativo ci permettono di fornire soluzioni di alta qualità che aiutano le aziende a crescere e a raggiungere i loro obiettivi strategici.</p>
+            <p>La nostra esperienza nel settore e l'approccio innovativo ci permettono di fornire soluzioni di alta qualità che aiutano le aziende a crescere e a raggiungere i loro obiettivi strategici. Siamo impegnati a garantire il successo dei nostri clienti attraverso l'uso intelligente dei dati.</p>
+        </div>
+    </section>
+
+    <section id="expertise" class="section">
+        <div class="expertise-item animate__animated animate__fadeInUp">
+            <h2>Competenza Tecnica</h2>
+            <p>Il nostro team di esperti è specializzato in tecnologie avanzate di analisi dei dati, garantendo soluzioni affidabili e scalabili per affrontare le sfide più complesse.</p>
+        </div>
+        <div class="expertise-item animate__animated animate__fadeInUp">
+            <h2>Innovazione Continua</h2>
+            <p>Siamo costantemente alla ricerca di nuove metodologie e strumenti per migliorare i nostri servizi, mantenendoci all'avanguardia nel settore della data science.</p>
+        </div>
+        <div class="expertise-item animate__animated animate__fadeInUp">
+            <h2>Supporto Dedicato</h2>
+            <p>Offriamo un supporto continuo ai nostri clienti, assicurandoci che ogni soluzione implementata continui a fornire valore nel tempo.</p>
+        </div>
+    </section>
+
+    <section id="client-testimonials" class="section">
+        <h2>Testimonianze dei Clienti</h2>
+        <div class="testimonial animate__animated animate__fadeIn">
+            <p>"DarkSouls Data Solution ha trasformato il nostro modo di vedere e utilizzare i dati. Le loro soluzioni hanno portato a decisioni più informate e a una notevole crescita del nostro business."</p>
+            <p class="client-name">- Marco Rossi, CEO di Rossi Enterprises</p>
+        </div>
+        <div class="testimonial animate__animated animate__fadeIn">
+            <p>"La professionalità e la competenza del team di DarkSouls sono ineguagliabili. Hanno sviluppato soluzioni personalizzate che hanno migliorato significativamente la nostra efficienza operativa."</p>
+            <p class="client-name">- Lucia Bianchi, CTO di Bianchi Tech</p>
+        </div>
+    </section>
+
+    <section id="call-to-action" class="section">
+        <div class="cta-content animate__animated animate__zoomIn">
+            <h2>Contattaci Oggi Stesso</h2>
+            <p>Scopri come DarkSouls Data Solution può aiutare la tua azienda a raggiungere nuovi livelli di successo attraverso l'uso strategico dei dati.</p>
+            <a href="contact.html" class="cta-button">Contattaci</a>
         </div>
     </section>
 
